--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -54,19 +54,23 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<build>
+<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			
+				
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>repackage</goal> 
+						</goals>
+					</execution>
+				</executions>
+			</plugin>			
 		</plugins>
+		<finalName>eureka</finalName>
 	</build>
 
 </project>
