--- a/hello-service/pom.xml
+++ b/hello-service/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Hello_SpringBoot_With_Jar</name>
 	<description>Hello_SpringBoot_With_Jar</description>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
