--- a/eureka-service/Dockerfile
+++ b/eureka-service/Dockerfile
@@ -1,7 +1,8 @@
 FROM openjdk:8u131-jdk-alpine
 MAINTAINER "Ashu"
 EXPOSE 8010
-WORKDIR  /usr/local/bin/
+#WORKDIR  /usr/local/bin/
+
 COPY ./target/eureka.jar   eureka.jar
 CMD ["java","-jar","eureka.jar"]
 
