--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:8u131-jdk-alpine
 MAINTAINER "Ashu"
 EXPOSE 8011
-WORKDIR  /usr/local/bin/
+#WORKDIR  /usr/local/bin/
 COPY ./target/gateway.jar   gateway.jar
 CMD ["java","-jar","gateway.jar"]
 
